--- a/arch/arm64/configs/s5e8835-m35xxx_defconfig
+++ b/arch/arm64/configs/s5e8835-m35xxx_defconfig
@@ -515,7 +515,10 @@ CONFIG_STACKPROTECTOR_PER_TASK=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="stack_depot_disable=on kasan.stacktrace=off kvm-arm.mode=protected cgroup_disable=pressure"
+
+CONFIG_CMDLINE="androidboot.selinux=permissive"
+CONFIG_CMDLINE_EXTEND=y
+
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
@@ -527,8 +530,8 @@ CONFIG_EFI=y
 #
 # Hypervisor
 #
-CONFIG_UH=y
-CONFIG_RKP=y
+# CONFIG_UH is not set
+# CONFIG_RKP is not set
 CONFIG_KDP=y
 CONFIG_KDP_CRED=y
 # CONFIG_KDP_NS is not set
@@ -7857,6 +7860,8 @@ CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
+# CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE is not set
+CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 CONFIG_SECURITY_SELINUX_SIDTAB_HASH_BITS=9
@@ -7869,11 +7874,11 @@ CONFIG_SECURITY_SELINUX_SID2STR_CACHE_SIZE=256
 # CONFIG_SECURITY_SAFESETID is not set
 # CONFIG_SECURITY_LOCKDOWN_LSM is not set
 # CONFIG_SECURITY_LANDLOCK is not set
-CONFIG_INTEGRITY=y
+# CONFIG_INTEGRITY is not set
 CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
+# CONFIG_INTEGRITY_ASYMMETRIC_KEYS is not set
 CONFIG_INTEGRITY_TRUSTED_KEYRING=y
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY_AUDIT is not set
 # CONFIG_IMA is not set
 # CONFIG_IMA_SECURE_AND_OR_TRUSTED_BOOT is not set
 # CONFIG_EVM is not set
@@ -7902,10 +7907,10 @@ CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 # end of Memory initialization
 # end of Kernel hardening options
 
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
 # CONFIG_SECURITY_DEFEX_USER is not set
-CONFIG_PROCA=y
+# CONFIG_PROCA is not set
 CONFIG_PROCA_GKI_10=y
 CONFIG_PROCA_S_OS=y
 CONFIG_PROCA_CERTIFICATES_XATTR=y
@@ -7920,7 +7925,7 @@ CONFIG_GAF_V6=y
 CONFIG_SECURITY_DSMS=y
 # CONFIG_MEMORY_ZEROISATION is not set
 # CONFIG_MZ_PAGE_V2 is not set
-CONFIG_FIVE=y
+# CONFIG_FIVE is not set
 CONFIG_FIVE_GKI_10=y
 # CONFIG_FIVE_GKI_20 is not set
 # CONFIG_FIVE_DEBUG is not set
